# risklens

./: README.md  pyproject.toml
risklens/: __init__.py  cli.py
risklens/analytics/: __init__.py  returns.py
risklens/data/: loaders.py  validators.py
sample_data/: prices_sample.csv
tests/: test_loaders.py  test_returns.py
