[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "risklens"
version = "0.0.1"
description = "A small Python toolkit for portfolio risk analytics."
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["risklens*"]

[tool.ruff]
line-length = 100
target-version = "py312"
